--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<a href="project.html">
 										<h2>Example 1</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -92,7 +92,7 @@
 									<a href="project.html">
 										<h2>Example 2</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -103,7 +103,7 @@
 									<a href="project.html">
 										<h2>Example 3</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -114,7 +114,7 @@
 									<a href="project.html">
 										<h2>Example 4</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -125,7 +125,7 @@
 									<a href="project.html">
 										<h2>Example 5</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -136,7 +136,7 @@
 									<a href="project.html">
 										<h2>Example 6</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -147,7 +147,7 @@
 									<a href="project.html">
 										<h2>Example 7</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -158,7 +158,7 @@
 									<a href="project.html">
 										<h2>Example 8</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -169,7 +169,7 @@
 									<a href="project.html">
 										<h2>Example 9</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -180,7 +180,7 @@
 									<a href="project.html">
 										<h2>Example 10</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
@@ -191,7 +191,7 @@
 									<a href="project.html">
 										<h2>Example 11</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 									
@@ -203,7 +203,7 @@
 									<a href="project.html">
 										<h2>Example 12</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Short description of this project.</p>
 										</div>
 									</a>
 								</article>
