--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<!--<a href="index.html" class="logo">-->
 									<!--<span class="symbol"><img src="images/logo.svg" alt="" />-->
-									</span><span class="title">EXAMPLE SOUND PORTFOLIO</span>
-								</a>
+									<!--</span><span class="title">EXAMPLE SOUND PORTFOLIO</span>
+								</a>-->
 								
 
 							<!-- Nav -->
@@ -57,7 +57,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<iframe width="385" height="300"
+							<!--<iframe width="385" height="300"
 							src="https://www.youtube.com/embed/wDchsz8nmbo">
 							</iframe>
 
@@ -67,7 +67,8 @@
 
 							<iframe width="385" height="300"
 							src="https://www.youtube.com/embed/xrRDlOWR1OU">
-							</iframe>
+							</iframe>-->
+							<p align="center"><iframe src="https://www.youtube.com/embed/K4TOrB7at0Y?autoplay=1" allow="autoplay" width="650" height="350"></iframe></p>
 							&nbsp
 							&nbsp
 							&nbsp
