placeholder about me
yeah that's right

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 							<div id="LABELTEXT"><strong><h2>ABOUT ME</h2></strong></div>
 							<div id="ABOUTME">
-							<p>[PLACEHOLDER TEXT]</p>
+								<p>Hi! I'm Michael, a guy who likes making cool sounds. I became interested in sound design after I got a recommendation on YouTube to watch the making-of video of Blizzard Entertainment's ability sound design for their characters in 2024. After I began college, I decided to delve into game sound design while majoring in Media Arts at Emerson College, and all of my audio classes became my instant favorites. Here, I worked on sound design for many student films as well as game jams, and I enjoy making sound redesigns for AAA titles. I think sound design is an excellent balance between my creative talents and my more mechanically-oriented engineering skills. I’m so excited to share my sounds with you!</p>
 							</div>
 
 							<div id="LABELTEXT"><strong><h2>CONTACT</h2></strong></div>
