--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 							<div id="LABELTEXT"><strong><h2>ABOUT ME</h2></strong></div>
 							<div id="ABOUTME">
-								<p>Hi! I'm Michael, a guy who likes making cool sounds. I became interested in sound design after I got a recommendation on YouTube to watch the making-of video of Blizzard Entertainment's ability sound design for their characters in 2024. After I began college, I decided to delve into game sound design while majoring in Media Arts at Emerson College, and all of my audio classes became my instant favorites. Here, I worked on sound design for many student films as well as game jams, and I enjoy making sound redesigns for AAA titles. I think sound design is an excellent balance between my creative talents and my more mechanically-oriented engineering skills. I’m so excited to share my sounds with you!</p>
+								<p>Hello! I’m Mike, a student at Northeastern University. I’ve always liked how audio could build narratives, whether it’s through film, TV, and especially games! Sound design has always been a passion of mine, and it’s because I want people to ask the same things I asked when I started: “That sounded awesome! How’d they do that?” I mainly come from a film and television background, where I specialize in recording foley, field recordings, and working audio in live broadcasts, but I know I want to expand my experience and skills into something in the gaming industry. Sound design, with its focus on immersion and narrative, seems to be the natural fit for me.</p>
 								<p>I also like
 									<a href="gamedev/index.html">making games!</a>
 								</p>
